# TabGRN

./: .gitignore  README.md  minimal.yml  myriad_inference.sh  myriad_tabgrn.sh  myriad_trace.sh  pyproject.toml  pyrightconfig.json  technical_design.md  training_myriad.yml
experiments/debug_local/: config.json
experiments/debug_local_dirichlet/: config.json
experiments/debug_local_dirichlet_composition/: config.json
experiments/debug_local_dirichlet_day/: config.json
experiments/debug_local_dirichlet_day_composition/: config.json
experiments/debug_local_dirichlet_day_pseudotime/: config.json
experiments/debug_local_dirichlet_pseudotime/: config.json
experiments/debug_local_dirichlet_pseudotime_composition/: config.json
path/data_preparation/: AnnData_induction.ipynb  dataset.py  prep.py
path/model /: tabicl.py
src/: AnnData_induction.ipynb  XGB_classifier_run.py  data_prep.py
src/EDA_plotting/: PCA.py  temporal_heatmap.py  temporal_lineplot.py
src/data preprocessing/: clean.py  dataprep.ipynb
src/data_prep/: AnnData_induction.ipynb  data_prep.py  prep.py
src/figures/: batch_qc.py  cell_identity_proba.py  pseudotime_regression.py
src/inference/: checkpoint_inference.py
src/plotting/: gene_temporal_expression.py  test.ipynb
src/train/: XGB_regressor_run.py  example_training.py  linear_regressor_run.py  nearest_centroid_run.py  tabgrn_debug_run.py  tabgrn_myriad_run.py  trace_debug_run.py  trace_myriad_run.py
test/: test_prep.py
tests/: conftest.py
tests/integration/: test_dataset.py
tests/unit/: test_callbacks.py  test_cell_table_builder.py  test_context_sampler.py  test_dataset.py  test_dirichlet_composition_head.py  test_dirichlet_loss.py  test_dual_head_loss.py  test_experiment_config.py  test_icl_collate.py  test_supervised_trainer.py  (+5 more)
(+20 files in other folders)
